--- a/tasks/create_repos.yml
+++ b/tasks/create_repos.yml
@@ -13,6 +13,7 @@
   register: __nexus_existing_repos__
   tags: provision-api
 
+# TODO: add support to accept type and format
 - name: Create repositories
   ansible.builtin.uri:
     url: "{{ nexus_api_scheme }}://{{ nexus_api_hostname }}:{{ nexus_api_port }}{{ nexus_api_context_path }}service/rest/v1/repositories/maven/proxy"
@@ -30,6 +31,7 @@
     loop_var: repo
   when: repo.name not in __nexus_existing_repos__.json | map(attribute='name') | list
 
+# TODO: add support to accept type and format
 - name: Update repositories when repository exists
   ansible.builtin.uri:
     url: "{{ nexus_api_scheme }}://{{ nexus_api_hostname }}:{{ nexus_api_port }}{{ nexus_api_context_path }}service/rest/v1/repositories/maven/proxy/{{ repo.name }}"
