process maven group repos

--- a/tasks/process_repos_list.yml
+++ b/tasks/process_repos_list.yml
@@ -110,14 +110,30 @@
           {%- endfor -%}
           {{ result | to_json | from_json }}
 
-    # - name: Apply defaults to maven group repos
-    #   ansible.builtin.set_fact:
-    #     nexus_repos_maven_group: >-
-    #       {%- set result = [] -%}
-    #       {%- for repo in nexus_repos_maven_group -%}
-    #         {{ result.append(_nexus_repos_maven_defaults | combine(repo)) }}
-    #       {%- endfor -%}
-    #       {{ result | to_json | from_json }}
+    - name: Apply defaults to maven group repos
+      ansible.builtin.set_fact:
+        nexus_repos_maven_group: >-
+          {%- set result = [] -%}
+          {%- for repo in nexus_repos_maven_group -%}
+            {%- set combined_repo = _nexus_repos_maven_defaults | combine(repo) -%}
+            {%- set transformed_repo = {
+              'name': combined_repo.name,
+              'online': combined_repo.online | default(true),
+              'storage': {
+                'blobStoreName': combined_repo.blob_store | default('default'),
+                'strictContentTypeValidation': combined_repo.strict_content_validation | default(omit)
+              },
+              'group': {
+                'memberNames': combined_repo.member_repos | default([])
+              }
+            } -%}
+            {%- if use_api -%}
+              {{ result.append(transformed_repo) }}
+            {%- else -%}
+              {{ result.append(combined_repo) }}
+            {%- endif -%}
+          {%- endfor -%}
+          {{ result | to_json | from_json }}
 
     - name: Add maven repositories to global repos list
       ansible.builtin.set_fact:
