--- a/tasks/process_repos_list.yml
+++ b/tasks/process_repos_list.yml
@@ -165,19 +165,75 @@
             +
             (nexus_repos_maven_group | map('combine', {"format": "maven", "type": "group"}) | list)
           }}
-      #when: not nexus_use_api_for_provisioning | default(false) | bool
 
-# - name: Process definitions for docker
-#   when: nexus_config_docker | bool
-#   block:
-#     - name: Apply defaults to docker proxy repos
-#       ansible.builtin.set_fact:
-#         nexus_repos_docker_proxy: >-
-#           {%- set result = [] -%}
-#           {%- for repo in nexus_repos_docker_proxy -%}
-#             {{ result.append(_nexus_repos_docker_defaults | combine(repo)) }}
-#           {%- endfor -%}
-#           {{ result | to_json | from_json }}
+- name: Process definitions for docker
+  when: nexus_config_docker | bool
+  block:
+    - name: Apply defaults to docker proxy repos
+      ansible.builtin.set_fact:
+        nexus_repos_docker_proxy: >-
+          {%- set result = [] -%}
+          {%- for repo in nexus_repos_docker_proxy -%}
+            {%- set combined_repo = _nexus_repos_docker_defaults | combine(repo) -%}
+            {%- set transformed_repo = {
+              'name': combined_repo.name,
+              'online': combined_repo.online | default(true),
+              'storage': {
+                'blobStoreName': combined_repo.blob_store | default('default'),
+                'strictContentTypeValidation': combined_repo.strict_content_validation | default(omit),
+                'writePolicy': combined_repo.write_policy | default('ALLOW_ONCE') | upper
+              },
+              'cleanup': {
+                'policyNames': combined_repo.cleanup_policies | default([])
+              },
+              'proxy': {
+                'remoteUrl': combined_repo.remote_url | default(omit),
+                'contentMaxAge': combined_repo.maximum_component_age | default(omit),
+                'metadataMaxAge': combined_repo.maximum_metadata_age | default(omit)
+              },
+              'negativeCache': {
+                'enabled': combined_repo.negative_cache_enabled | default(omit),
+                'timeToLive': combined_repo.negative_cache_ttl | default(omit)
+              },
+              'httpClient': {
+                'blocked': combined_repo.blocked | default(false),
+                'autoBlock': combined_repo.auto_block | default(true),
+                'connection': {
+                  'retries': combined_repo.connection_retries | default(omit),
+                  'useTrustStore': combined_repo.use_trust_store | default(omit),
+                  'userAgentSuffix': combined_repo.user_agent_suffix | default(omit),
+                  'timeout': combined_repo.connection_timeout | default(omit),
+                  'enableCircularRedirects': combined_repo.enable_circular_redirects | default(omit),
+                  'enableCookies': combined_repo.enable_cookies | default(omit)
+                },
+                'authentication': authentication | default(omit)
+              },
+              'replication': {
+                'preemptivePullEnabled': combined_repo.replication_preemptive_pull_enabled | default(omit),
+                'assetPathRegex': combined_repo.replication_asset_path_regex | default
+                },
+              'routingRule': combined_repo.routing_rule | default(omit),
+              'docker': {
+                'v1Enabled': combined_repo.v1_enabled | default(omit),
+                'forceBasicAuth': combined_repo.force_basic_auth | default(omit),
+                'httpPort': combined_repo.http_port | default(omit),
+                'httpsPort': combined_repo.https_port | default(omit),
+                'subdomain': combined_repo.sub_domain | default(omit)
+              },
+              'dockerProxy': {
+                'indexType': combined_repo.index_type | default(omit),
+                'indexUrl': combined_repo.index_url | default(omit),
+                'cacheForeignLayers': combined_repo.cache_foreign_layers | default(omit),
+                'foreignLayerUrlWhitelist': combined_repo.foreign_layer_url_whitelist | default([])
+              }
+            } -%}
+            {%- if use_api -%}
+              {{ result.append(transformed_repo) }}
+            {%- else -%}
+              {{ result.append(combined_repo) }}
+            {%- endif -%}
+          {%- endfor -%}
+          {{ result | to_json | from_json }}
 
 #     - name: Apply defaults to docker hosted repos
 #       ansible.builtin.set_fact:
@@ -197,18 +253,24 @@
 #           {%- endfor -%}
 #           {{ result | to_json | from_json }}
 
-#     - name: Add docker repositories to global repos list
-#       ansible.builtin.set_fact:
-#         _nexus_repos_global_list: >-
-#           {{
-#             _nexus_repos_global_list | default([])
-#             +
-#             (nexus_repos_docker_proxy | map('combine', {"format": "docker", "type": "proxy"}) | list)
-#             +
-#             (nexus_repos_docker_hosted | map('combine', {"format": "docker", "type": "hosted"}) | list)
-#             +
-#             (nexus_repos_docker_group | map('combine', {"format": "docker", "type": "group"}) | list)
-#           }}
+    - name: Add docker repositories to global repos list
+      ansible.builtin.set_fact:
+        _nexus_repos_global_list: >-
+          {{
+            _nexus_repos_global_list | default([])
+            +
+            (nexus_repos_docker_proxy | map('combine', {"format": "docker", "type": "proxy"}) | list)
+            +
+            (nexus_repos_docker_hosted | map('combine', {"format": "docker", "type": "hosted"}) | list)
+            +
+            (nexus_repos_docker_group | map('combine', {"format": "docker", "type": "group"}) | list)
+          }}
+        _nexus_repos_docker_proxy: >-
+          {{
+            _nexus_repos_docker_proxy | default([])
+            +
+            (nexus_repos_docker_proxy | map('combine', {"format": "docker", "type": "proxy"}) | list)
+          }}
 
 # - name: Process definitions for pypi
 #   when: nexus_config_pypi | bool
@@ -736,4 +798,10 @@
   ansible.builtin.copy:
     content: "{{ _nexus_repos_maven_group | to_nice_json }}"
     dest: "{{ nexus_download_dir }}/nexus_repos_maven_group.json"
+  when: nexus_use_api_for_provisioning | default(false) | bool
+
+- name: Write _nexus_repos_docker_proxy to file
+  ansible.builtin.copy:
+    content: "{{ _nexus_repos_docker_proxy | to_nice_json }}"
+    dest: "{{ nexus_download_dir }}/nexus_repos_docker_proxy.json"
   when: nexus_use_api_for_provisioning | default(false) | bool
