--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -161,6 +161,8 @@
         - "{{ _nexus_repos_maven_hosted }}"
         - "{{ _nexus_repos_maven_group }}"
         - "{{ _nexus_repos_docker_proxy }}"
+        - "{{ _nexus_repos_docker_hosted }}"
+        - "{{ _nexus_repos_docker_group }}"
       when: nexus_use_api_for_provisioning | default(false) | bool
 
     - name: Create/check privileges
