--- a/vars/blob_vars.yml
+++ b/vars/blob_vars.yml
@@ -31,6 +31,8 @@ nexus_blob_names:
     blob: "{{ nexus_blob_prefix }}p2"
   conda:
     blob: "{{ nexus_blob_prefix }}conda"
+  conan:
+    blob: "{{ nexus_blob_prefix }}conan"
   go:
     blob: "{{ nexus_blob_prefix }}go"
   cocoapods:
@@ -67,6 +69,8 @@ nexus_blobstores:
     path: "{{ nexus_data_dir }}/blobs/{{ nexus_blob_names.p2.blob }}"
   - name: "{{ nexus_blob_prefix }}conda"
     path: "{{ nexus_data_dir }}/blobs/{{ nexus_blob_names.conda.blob }}"
+  - name: "{{ nexus_blob_prefix }}conan"
+    path: "{{ nexus_data_dir }}/blobs/{{ nexus_blob_names.conan.blob }}"
   - name: "{{ nexus_blob_prefix }}go"
     path: "{{ nexus_data_dir }}/blobs/{{ nexus_blob_names.go.blob }}"
   - name: "{{ nexus_blob_prefix }}cocoapods"
