--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -166,6 +166,7 @@
         - "{{ _nexus_repos_bower_proxy }}"
         - "{{ _nexus_repos_bower_hosted }}"
         - "{{ _nexus_repos_bower_group }}"
+        - "{{ _nexus_repos_p2_proxy }}"
         - "{{ _nexus_repos_conan_proxy }}"
         - "{{ _nexus_repos_cocoapods_proxy }}"
       when: nexus_use_api_for_provisioning | default(false) | bool
