--- a/molecule/nexus_common_test_vars.yml
+++ b/molecule/nexus_common_test_vars.yml
@@ -214,35 +214,46 @@ nexus_repos_cleanup_policies:
       lastDownloaded: 120
       regexKey: "beta-*"
 nexus_repos_maven_proxy:
-  - name: central
+  - name: central-blob-default-permissive-http-authentication
     remote_url: https://repo1.maven.org/maven2/
     layout_policy: permissive
-    cleanup_policies:
-      - mvn_cleanup
-  - name: jboss
+    remote_username: admin
+    remote_password: admin123
+
+  - name: central-blob-default-permissive
+    remote_url: https://repo1.maven.org/maven2/
+    layout_policy: permissive
+
+  - name: jboss-api-blob-default
     remote_url: https://repository.jboss.org/nexus/content/groups/public-jboss/
-    cleanup_policies:
-      - mvn_cleanup
+
+  - name: jcenter-api-blob-default
+    remote_url: https://jcenter.bintray.com/
+
+  - name: jcenter-api
+    remote_url: https://jcenter.bintray.com/
 
 nexus_repos_maven_hosted:
-  - name: private-release
+  - name: private-release-cleanup-mvn-cleanup
     version_policy: release
     write_policy: allow_once # one of "allow", "allow_once" or "deny"
     cleanup_policies:
       - mvn_cleanup
 
 nexus_repos_maven_group:
-  - name: public
+  - name: public-mixed-permissive
     member_repos:
-      - central
-      - jboss
+      - private-release-cleanup-mvn-cleanup
+      - jcenter-api
     layout_policy: permissive
     version_policy: mixed
-  - name: public-offline
+
+  - name: public-offline-mixed-permissive
     online: false
     member_repos:
-      - central
-      - jboss
+      - private-release-cleanup-mvn-cleanup
+      - jcenter-api
+      - jboss-api-blob-default
     layout_policy: permissive
     version_policy: mixed
 
