--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -163,6 +163,9 @@
         - "{{ _nexus_repos_docker_proxy }}"
         - "{{ _nexus_repos_docker_hosted }}"
         - "{{ _nexus_repos_docker_group }}"
+        - "{{ _nexus_repos_pypi_proxy }}"
+        - "{{ _nexus_repos_pypi_hosted }}"
+        - "{{ _nexus_repos_pypi_group }}"
         - "{{ _nexus_repos_bower_proxy }}"
         - "{{ _nexus_repos_bower_hosted }}"
         - "{{ _nexus_repos_bower_group }}"
