Add support for Rubygems repositories

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -183,6 +183,9 @@
         - "{{ _nexus_repos_raw_proxy }}"
         - "{{ _nexus_repos_raw_hosted }}"
         - "{{ _nexus_repos_raw_group }}"
+        - "{{ _nexus_repos_rubygems_proxy }}"
+        - "{{ _nexus_repos_rubygems_hosted }}"
+        - "{{ _nexus_repos_rubygems_group }}"
         - "{{ _nexus_repos_bower_proxy }}"
         - "{{ _nexus_repos_bower_hosted }}"
         - "{{ _nexus_repos_bower_group }}"
