--- a/tasks/process_repos_list.yml
+++ b/tasks/process_repos_list.yml
@@ -641,153 +641,155 @@
             +
             (nexus_repos_raw_group | map('combine', {"format": "raw", "type": "group"}) | list)
           }}
-#             +
-#             (nexus_repos_gitlfs_hosted | map('combine', {"format": "gitlfs", "type": "hosted"}) | list)
-#           }}
 
-# - name: Process definitions for yum repositories
-#   when: nexus_config_yum | bool
-#   block:
-#     - name: Apply defaults to yum proxy repos
-#       ansible.builtin.set_fact:
-#         nexus_repos_yum_proxy: >-
-#           {%- set result = [] -%}
-#           {%- for repo in nexus_repos_yum_proxy -%}
-#             {{ result.append(_nexus_repos_yum_defaults | combine(repo)) }}
-#           {%- endfor -%}
-#           {{ result | to_json | from_json }}
+- name: Process definitions for rubygems repositories
+  when: nexus_config_rubygems | bool
+  block:
+    - name: Apply defaults to rubygems proxy repos
+      ansible.builtin.set_fact:
+        nexus_repos_rubygems_proxy: >-
+          {%- set result = [] -%}
+          {%- for repo in nexus_repos_rubygems_proxy -%}
+            {%- set combined_repo = _nexus_repos_rubygems_defaults | combine(repo) -%}
+            {%- set authentication = {
+                'type': combined_repo.remote_auth_type | default('username'),
+                'username': combined_repo.remote_username | default('username'),
+                'password': combined_repo.remote_password | default('password'),
+                'ntlmHost': combined_repo.ntlm_host | default(omit),
+                'ntlmDomain': combined_repo.ntlm_domain | default(omit),
+                'preemptive': combined_repo.preemptive | default(omit)
+            } if combined_repo.remote_auth_type is defined or combined_repo.remote_username is defined else omit -%}
+            {%- set transformed_repo = {
+              'name': combined_repo.name,
+              'online': combined_repo.online | default(true),
+              'storage': {
+                'blobStoreName': combined_repo.blob_store | default('default'),
+                'strictContentTypeValidation': combined_repo.strict_content_validation | default(omit)
+              },
+              'cleanup': {
+                'policyNames': combined_repo.cleanup_policies | default([])
+              },
+              'proxy': {
+                'remoteUrl': combined_repo.remote_url | default(omit),
+                'contentMaxAge': combined_repo.maximum_component_age | default(omit),
+                'metadataMaxAge': combined_repo.maximum_metadata_age | default(omit)
+              },
+              'negativeCache': {
+                'enabled': combined_repo.negative_cache_enabled | default(omit),
+                'timeToLive': combined_repo.negative_cache_ttl | default(omit)
+              },
+              'httpClient': {
+                'blocked': combined_repo.blocked | default(false),
+                'autoBlock': combined_repo.auto_block | default(true),
+                'connection': {
+                  'retries': combined_repo.connection_retries | default(omit),
+                  'useTrustStore': combined_repo.use_trust_store | default(omit),
+                  'userAgentSuffix': combined_repo.user_agent_suffix | default(omit),
+                  'timeout': combined_repo.connection_timeout | default(omit),
+                  'enableCircularRedirects': combined_repo.enable_circular_redirects | default(omit),
+                  'enableCookies': combined_repo.enable_cookies | default(omit)
+                },
+                'authentication': authentication | default(omit)
+              },
+              'replication': {
+                'preemptivePullEnabled': combined_repo.replication_preemptive_pull | default(omit),
+                'assetPathRegex': combined_repo.replication_asset_path_regex | default(omit)
+              },
+              'routingRule': combined_repo.routing_rule | default(omit)
+            } -%}
+            {%- if use_api -%}
+              {{ result.append(transformed_repo) }}
+            {%- else -%}
+              {{ result.append(combined_repo) }}
+            {%- endif -%}
+          {%- endfor -%}
+          {{ result | to_json | from_json }}
 
-#     - name: Apply defaults to yum hosted repos
-#       ansible.builtin.set_fact:
-#         nexus_repos_yum_hosted: >-
-#           {%- set result = [] -%}
-#           {%- for repo in nexus_repos_yum_hosted -%}
-#             {{ result.append(_nexus_repos_yum_defaults | combine(repo)) }}
-#           {%- endfor -%}
-#           {{ result | to_json | from_json }}
+    - name: Apply defaults to rubygems hosted repos
+      ansible.builtin.set_fact:
+        nexus_repos_rubygems_hosted: >-
+          {%- set result = [] -%}
+          {%- for repo in nexus_repos_rubygems_hosted -%}
+            {%- set combined_repo = _nexus_repos_rubygems_defaults | combine(repo) -%}
+            {%- set transformed_repo = {
+              'name': combined_repo.name,
+              'online': combined_repo.online | default(true),
+              'storage': {
+                'blobStoreName': combined_repo.blob_store | default('default'),
+                'strictContentTypeValidation': combined_repo.strict_content_validation | default(omit),
+                'writePolicy': combined_repo.write_policy | default('ALLOW_ONCE') | upper
+              },
+              'cleanup': {
+                'policyNames': combined_repo.cleanup_policies | default([])
+              },
+              'component': {
+                'proprietaryComponents': true
+              }
+            } -%}
+            {%- if use_api -%}
+              {{ result.append(transformed_repo) }}
+            {%- else -%}
+              {{ result.append(combined_repo) }}
+            {%- endif -%}
+          {%- endfor -%}
+          {{ result | to_json | from_json }}
 
-#     - name: Apply defaults to yum group repos
-#       ansible.builtin.set_fact:
-#         nexus_repos_yum_group: >-
-#           {%- set result = [] -%}
-#           {%- for repo in nexus_repos_yum_group -%}
-#             {{ result.append(_nexus_repos_yum_defaults | combine(repo)) }}
-#           {%- endfor -%}
-#           {{ result | to_json | from_json }}
+    - name: Apply defaults to rubygems group repos
+      ansible.builtin.set_fact:
+        nexus_repos_rubygems_group: >-
+          {%- set result = [] -%}
+          {%- for repo in nexus_repos_rubygems_group -%}
+            {%- set combined_repo = _nexus_repos_rubygems_defaults | combine(repo) -%}
+            {%- set transformed_repo = {
+              'name': combined_repo.name,
+              'online': combined_repo.online | default(true),
+              'storage': {
+                'blobStoreName': combined_repo.blob_store | default('default'),
+                'strictContentTypeValidation': combined_repo.strict_content_validation | default(omit)
+              },
+              'group': {
+                'memberNames': combined_repo.member_repos | default([])
+              }
+            } -%}
+            {%- if use_api -%}
+              {{ result.append(transformed_repo) }}
+            {%- else -%}
+              {{ result.append(combined_repo) }}
+            {%- endif -%}
+          {%- endfor -%}
+          {{ result | to_json | from_json }}
 
-#     - name: Add yum repositories to global repos list
-#       ansible.builtin.set_fact:
-#         _nexus_repos_global_list: >-
-#           {{
-#             _nexus_repos_global_list | default([])
-#             +
-#             (nexus_repos_yum_proxy | map('combine', {"format": "yum", "type": "proxy"}) | list)
-#             +
-#             (nexus_repos_yum_hosted | map('combine', {"format": "yum", "type": "hosted"}) | list)
-#             +
-#             (nexus_repos_yum_group | map('combine', {"format": "yum", "type": "group"}) | list)
-#           }}
+    - name: Add rubygems repositories to global repos list
+      ansible.builtin.set_fact:
+        _nexus_repos_global_list: >-
+          {{
+            _nexus_repos_global_list | default([])
+            +
+            (nexus_repos_rubygems_proxy | map('combine', {"format": "rubygems", "type": "proxy"}) | list)
+            +
+            (nexus_repos_rubygems_hosted | map('combine', {"format": "rubygems", "type": "hosted"}) | list)
+            +
+            (nexus_repos_rubygems_group | map('combine', {"format": "rubygems", "type": "group"}) | list)
+          }}
+        _nexus_repos_rubygems_proxy: >-
+          {{
+            _nexus_repos_rubygems_proxy | default([])
+            +
+            (nexus_repos_rubygems_proxy | map('combine', {"format": "rubygems", "type": "proxy"}) | list)
+          }}
+        _nexus_repos_rubygems_hosted: >-
+          {{
+            _nexus_repos_rubygems_hosted | default([])
+            +
+            (nexus_repos_rubygems_hosted | map('combine', {"format": "rubygems", "type": "hosted"}) | list)
+          }}
+        _nexus_repos_rubygems_group: >-
+          {{
+            _nexus_repos_rubygems_group | default([])
+            +
+            (nexus_repos_rubygems_group | map('combine', {"format": "rubygems", "type": "group"}) | list)
+          }}
 
-# - name: Process definitions for apt repositories
-#   when: nexus_config_apt | bool
-#   block:
-#     - name: Apply defaults to apt proxy repos
-#       ansible.builtin.set_fact:
-#         nexus_repos_apt_proxy: >-
-#           {%- set result = [] -%}
-#           {%- for repo in nexus_repos_apt_proxy -%}
-#             {{ result.append(_nexus_repos_apt_defaults | combine(repo)) }}
-#           {%- endfor -%}
-#           {{ result | to_json | from_json }}
-
-#     - name: Apply defaults to apt hosted repos
-#       ansible.builtin.set_fact:
-#         nexus_repos_apt_hosted: >-
-#           {%- set result = [] -%}
-#           {%- for repo in nexus_repos_apt_hosted -%}
-#             {{ result.append(_nexus_repos_apt_defaults | combine(repo)) }}
-#           {%- endfor -%}
-#           {{ result | to_json | from_json }}
-
-#     - name: Add apt repositories to global repos list
-#       ansible.builtin.set_fact:
-#         _nexus_repos_global_list: >-
-#           {{
-#             _nexus_repos_global_list | default([])
-#             +
-#             (nexus_repos_apt_proxy | map('combine', {"format": "apt", "type": "proxy"}) | list)
-#             +
-#             (nexus_repos_apt_hosted | map('combine', {"format": "apt", "type": "hosted"}) | list)
-#           }}
-
-# - name: Process definitions for helm repositories
-#   when: nexus_config_helm | bool
-#   block:
-#     - name: Apply defaults to helm proxy repos
-#       ansible.builtin.set_fact:
-#         nexus_repos_helm_proxy: >-
-#           {%- set result = [] -%}
-#           {%- for repo in nexus_repos_helm_proxy -%}
-#             {{ result.append(_nexus_repos_helm_defaults | combine(repo)) }}
-#           {%- endfor -%}
-#           {{ result | to_json | from_json }}
-
-#     - name: Apply defaults to helm hosted repos
-#       ansible.builtin.set_fact:
-#         nexus_repos_helm_hosted: >-
-#           {%- set result = [] -%}
-#           {%- for repo in nexus_repos_helm_hosted -%}
-#             {{ result.append(_nexus_repos_helm_defaults | combine(repo)) }}
-#           {%- endfor -%}
-#           {{ result | to_json | from_json }}
-
-#     - name: Add helm repositories to global repos list
-#       ansible.builtin.set_fact:
-#         _nexus_repos_global_list: >-
-#           {{
-#             _nexus_repos_global_list | default([])
-#             +
-#             (nexus_repos_helm_proxy | map('combine', {"format": "helm", "type": "proxy"}) | list)
-#             +
-#             (nexus_repos_helm_hosted | map('combine', {"format": "helm", "type": "hosted"}) | list)
-#           }}
-
-# - name: Process definitions for r
-#   when: nexus_config_r | bool
-#   block:
-#     - name: Apply defaults to r proxy repos
-#       ansible.builtin.set_fact:
-#         nexus_repos_r_proxy: >-
-#           {%- set result = [] -%}
-#           {%- for repo in nexus_repos_r_proxy -%}
-#             {{ result.append(_nexus_repos_r_defaults | combine(repo)) }}
-#           {%- endfor -%}
-#           {{ result | to_json | from_json }}
-
-#     - name: Apply defaults to r hosted repos
-#       ansible.builtin.set_fact:
-#         nexus_repos_r_hosted: >-
-#           {%- set result = [] -%}
-#           {%- for repo in nexus_repos_r_hosted -%}
-#             {{ result.append(_nexus_repos_r_defaults | combine(repo)) }}
-#           {%- endfor -%}
-#           {{ result | to_json | from_json }}
-
-#     - name: Apply defaults to r group repos
-#       ansible.builtin.set_fact:
-#         nexus_repos_r_group: >-
-#           {%- set result = [] -%}
-#           {%- for repo in nexus_repos_r_group -%}
-#             {{ result.append(_nexus_repos_r_defaults | combine(repo)) }}
-#           {%- endfor -%}
-#           {{ result | to_json | from_json }}
-
-#     - name: Add r repositories to global repos list
-#       ansible.builtin.set_fact:
-#         _nexus_repos_global_list: >-
-#           {{
-#             _nexus_repos_global_list | default([])
-#             +
 #             (nexus_repos_r_proxy | map('combine', {"format": "r", "type": "proxy"}) | list)
 #             +
 #             (nexus_repos_r_hosted | map('combine', {"format": "r", "type": "hosted"}) | list)
