Add support for NPM repositories

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -189,6 +189,9 @@
         - "{{ _nexus_repos_bower_proxy }}"
         - "{{ _nexus_repos_bower_hosted }}"
         - "{{ _nexus_repos_bower_group }}"
+        - "{{ _nexus_repos_npm_proxy }}"
+        - "{{ _nexus_repos_npm_hosted }}"
+        - "{{ _nexus_repos_npm_group }}"
         - "{{ _nexus_repos_p2_proxy }}"
         - "{{ _nexus_repos_conan_proxy }}"
         - "{{ _nexus_repos_cocoapods_proxy }}"
