Add support for Yum repositories

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -196,6 +196,9 @@
         - "{{ _nexus_repos_nuget_hosted }}"
         - "{{ _nexus_repos_nuget_group }}"
         - "{{ _nexus_repos_gitlfs_hosted }}"
+        - "{{ _nexus_repos_yum_proxy }}"
+        - "{{ _nexus_repos_yum_hosted }}"
+        - "{{ _nexus_repos_yum_group }}"
         - "{{ _nexus_repos_p2_proxy }}"
         - "{{ _nexus_repos_conan_proxy }}"
         - "{{ _nexus_repos_cocoapods_proxy }}"
