--- a/tasks/process_repos_list.yml
+++ b/tasks/process_repos_list.yml
@@ -1483,6 +1483,133 @@
             +
             (nexus_repos_yum_group | map('combine', {"format": "yum", "type": "group"}) | list)
           }}
+
+- name: Process definitions for apt repositories
+  when: nexus_config_apt | bool
+  block:
+    - name: Apply defaults to apt proxy repos
+      ansible.builtin.set_fact:
+        nexus_repos_apt_proxy: >-
+          {%- set result = [] -%}
+          {%- for repo in nexus_repos_apt_proxy -%}
+            {%- set combined_repo = _nexus_repos_apt_defaults | combine(repo) -%}
+            {%- set authentication = {
+                'type': combined_repo.remote_auth_type | default('username'),
+                'username': combined_repo.remote_username | default('username'),
+                'password': combined_repo.remote_password | default('password'),
+                'ntlmHost': combined_repo.ntlm_host | default(omit),
+                'ntlmDomain': combined_repo.ntlm_domain | default(omit),
+                'preemptive': combined_repo.preemptive | default(omit)
+            } if combined_repo.remote_auth_type is defined or combined_repo.remote_username is defined else omit -%}
+            {%- set transformed_repo = {
+              'name': combined_repo.name,
+              'online': combined_repo.online | default(true),
+              'storage': {
+                'blobStoreName': combined_repo.blob_store | default('default'),
+                'strictContentTypeValidation': combined_repo.strict_content_validation | default(omit)
+              },
+              'cleanup': {
+                'policyNames': combined_repo.cleanup_policies | default([])
+              },
+              'proxy': {
+                'remoteUrl': combined_repo.remote_url | default(omit),
+                'contentMaxAge': combined_repo.maximum_component_age | default(omit),
+                'metadataMaxAge': combined_repo.maximum_metadata_age | default(omit)
+              },
+              'negativeCache': {
+                'enabled': combined_repo.negative_cache_enabled | default(omit),
+                'timeToLive': combined_repo.negative_cache_ttl | default(omit)
+              },
+              'httpClient': {
+                'blocked': combined_repo.blocked | default(false),
+                'autoBlock': combined_repo.auto_block | default(true),
+                'connection': {
+                  'retries': combined_repo.connection_retries | default(omit),
+                  'useTrustStore': combined_repo.use_trust_store | default(omit),
+                  'userAgentSuffix': combined_repo.user_agent_suffix | default(omit),
+                  'timeout': combined_repo.connection_timeout | default(omit),
+                  'enableCircularRedirects': combined_repo.enable_circular_redirects | default(omit),
+                  'enableCookies': combined_repo.enable_cookies | default(omit)
+                },
+                'authentication': authentication | default(omit)
+              },
+              'replication': {
+                'preemptivePullEnabled': combined_repo.replication_preemptive_pull | default(omit),
+                'assetPathRegex': combined_repo.replication_asset_path_regex | default(omit)
+              },
+              'routingRule': combined_repo.routing_rule | default(omit),
+              'apt': {
+                'distribution': combined_repo.distribution | default(omit),
+                'flat': combined_repo.flat | default(omit)
+              }
+            } -%}
+            {%- if use_api -%}
+              {{ result.append(transformed_repo) }}
+            {%- else -%}
+              {{ result.append(combined_repo) }}
+            {%- endif -%}
+          {%- endfor -%}
+          {{ result | to_json | from_json }}
+
+    - name: Apply defaults to apt hosted repos
+      ansible.builtin.set_fact:
+        nexus_repos_apt_hosted: >-
+          {%- set result = [] -%}
+          {%- for repo in nexus_repos_apt_hosted -%}
+            {%- set combined_repo = _nexus_repos_apt_defaults | combine(repo) -%}
+            {%- set transformed_repo = {
+              'name': combined_repo.name,
+              'online': combined_repo.online | default(true),
+              'storage': {
+                'blobStoreName': combined_repo.blob_store | default('default'),
+                'strictContentTypeValidation': combined_repo.strict_content_validation | default(omit),
+                'writePolicy': combined_repo.write_policy | default('ALLOW_ONCE') | upper
+              },
+              'cleanup': {
+                'policyNames': combined_repo.cleanup_policies | default([])
+              },
+              'component': {
+                'proprietaryComponents': true
+              },
+              'apt': {
+                'distribution': combined_repo.distribution | default(omit)
+              },
+              'aptSigning': {
+                'keypair': combined_repo.keypair | default(omit),
+                'passphrase': combined_repo.passphrase | default(omit)
+              }
+            } -%}
+            {%- if use_api -%}
+              {{ result.append(transformed_repo) }}
+            {%- else -%}
+              {{ result.append(combined_repo) }}
+            {%- endif -%}
+          {%- endfor -%}
+          {{ result | to_json | from_json }}
+
+    - name: Add apt repositories to global repos list
+      ansible.builtin.set_fact:
+        _nexus_repos_global_list: >-
+          {{
+            _nexus_repos_global_list | default([])
+            +
+            (nexus_repos_apt_proxy | map('combine', {"format": "apt", "type": "proxy"}) | list)
+            +
+            (nexus_repos_apt_hosted | map('combine', {"format": "apt", "type": "hosted"}) | list)
+          }}
+        _nexus_repos_apt_proxy: >-
+          {{
+            _nexus_repos_apt_proxy | default([])
+            +
+            (nexus_repos_apt_proxy | map('combine', {"format": "apt", "type": "proxy"}) | list)
+          }}
+        _nexus_repos_apt_hosted: >-
+          {{
+            _nexus_repos_apt_hosted | default([])
+            +
+            (nexus_repos_apt_hosted | map('combine', {"format": "apt", "type": "hosted"}) | list)
+          }}
+
 - name: Process definitions for p2 repositories
   when: nexus_config_p2 | bool
   block:
