Add support for R repositories

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -203,6 +203,9 @@
         - "{{ _nexus_repos_apt_hosted }}"
         - "{{ _nexus_repos_helm_proxy }}"
         - "{{ _nexus_repos_helm_hosted }}"
+        - "{{ _nexus_repos_r_proxy }}"
+        - "{{ _nexus_repos_r_hosted }}"
+        - "{{ _nexus_repos_r_group }}"
         - "{{ _nexus_repos_p2_proxy }}"
         - "{{ _nexus_repos_conan_proxy }}"
         - "{{ _nexus_repos_cocoapods_proxy }}"
